# wandern

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  .wd.json  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  compose.yml  input.txt  migration_graph.gv  mkdocs.yml  playground.ipynb  playground.py  pyproject.toml  requirements.txt  requirements_dev.txt  ruff.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: release.yml  release_test.yml  test_publish.yml  tests.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
migrations/: .wd.json  0002_create_table_2.sql  0003_create_table_3.sql  1.sql
robin/: __init__.py
tests/: __init__.py  conftest.py  test_constants.py  test_engine.py  test_graph.py  test_graph_builder.py  test_main.py  test_migration.py  test_migration_service.py  test_models.py  test_provider.py  test_robin.py  test_select.py  test_utils.py
tests/agents/: test_base_agent.py  test_migration_agent.py  test_models.py
tests/cli/: test_utils.py
tests/databases/: test_postgresql.py
tests/databases/postgresql/: conftest.py  test_postgresql_connection.py  test_postgresql_migration.py  test_postgresql_provider.py
tests/databases/postgresql/fixtures/wd_migrations/: 723f6efb_oZfzVwBRYk_1st_commit.sql  acac2fb1_DajeLVuXIN_2nd_commit.sql
tests/databases/sqlite/: conftest.py  test_sqlite.py  test_sqlite_connection.py  test_sqlite_migration.py  test_sqlite_provider.py
tests/fixtures/migrations/: 0001_create_table.sql  0002_create_table_2.sql  0004_create_table_4.sql  0005_create_table_5.sql
tests/fixtures/wd_migrations/: 68731288_jabIY4RvfT_3rd_commit.sql
tests/migrations/: 0001_create_table.sql  0003_create_table_3.sql  0004_create_table_4.sql  0005_create_table_5.sql
wandern/: __init__.py  __main__.py  _cli.py  agent.py  builder.py  cli.py  commands.py  config.py  constants.py  exceptions.py  file.py  graph.py  graph_builder.py  main.py  migration.py  models.py  service.py  sql.py  types.py  utils.py
wandern/agents/: agent.py  base_agent.py  constants.py  migration_agent.py  models.py  sql_agent.py
wandern/cli/: main.py  utils.py
wandern/databases/: __init__.py  base.py  postgresql.py  provider.py  sqlite.py
wandern/services/: migration.py
wandern/templates/: __init__.py  engine.py  migration.sql.j2  version.py  version.sql
